[gd_scene load_steps=3 format=2]

[ext_resource path="res://samagri/theme/user_interface.tres" type="Theme" id=1]
[ext_resource path="res://src/layers/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.133333, 0.141176, 0.172549, 0.901961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.5
margin_top = -60.5
margin_right = 126.5
margin_bottom = -3.5
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = 26.0
margin_right = 127.0
margin_bottom = 83.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Control/ResumeButton" to="Control" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control/ExitButton" to="Control" method="_on_ExitButton_pressed"]
